# douyin-crawler

./: .crontab-backup-20260430-160905.txt  .gitignore  CLAUDE.md  README.md  douyin-scraper.js  init-db.js  open-browser.js  package-lock.json  package.json  pnpm-lock.yaml  test-verify.sh
docs/: API.md
scripts/: add-local-file-path-column.js  check_download_video_sizes.py  run-scraper-cron.sh  run-worker-cron.sh  start-celery.sh  stop-celery.sh  trigger_download_yesterday.py
worker/: .env  .env.example  README.md  celery_app.py  celerybeat-schedule.db  cli.py  config.py  db.py  pyproject.toml  tasks.py  test_tasks.py
